--- a/angular.json
+++ b/angular.json
@@ -48,7 +48,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/KillerCatLogo.ico",
+              "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
@@ -114,7 +114,7 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/KillerCatLogo.ico",
+              "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
